tests/ui/missing_width_inline.rs
use fixed_derive::{ReadFixed, WriteFixed};

#[derive(ReadFixed, WriteFixed)]
struct Foo(u64);

pub fn main() {}
